--- a/public_html/index.html
+++ b/public_html/index.html
@@ -4,8 +4,8 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to c
 Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this template
 -->
 <html>
-<head>
-    <title>Homepage</title>
+    <head>
+       <title>Homepage</title>
     <link rel="stylesheet" href="ConstantStyle.css" type="text/css"/>
     <style>
         body {
@@ -49,11 +49,13 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
         <a href="Login.html">Login</a>
         <a href="About us.html">About Us</a>
         <a href="SignUp.html" class="right">Sign up</a>
-    </div>
-</head>
+    </div>  
+    </head>
+   
+
 <body>
 
-    
+      <h1 class="smoke-text">Welcome to CoinBliss</h1>
 
     <div class="parallax">
         <div class="parallax-content">
