Added rights and financial glossary link

--- a/public_html/FinancialResourse.html
+++ b/public_html/FinancialResourse.html
@@ -134,9 +134,10 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
             <li><a href="https://enrichest.com/en/blog/budgeting-education-guide-to-financial-success">Budgeting Education: A Guide to Financial Success</a></li>
             </ul>
      </div>
-    </div>
-    <h2>Financial Glossary:</h2>
+        </div>
     
+    <h2>Financial Glossary:</h2>
+    <a href="https://www.treasury.gov.za/documents/national%20budget/2018/review/Glossary.pdf">Tap here to see financial glossary</a>
 
    
 </div>
@@ -144,6 +145,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
 </body>
 
 
-    <div class="footer">         
+    <div class="footer">
+         © 2024 CoinBliss. All rights reserved.
                     </div>
 </html>
