--- a/public_html/SignUp.html
+++ b/public_html/SignUp.html
@@ -86,6 +86,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
   </div>
 
 </body>
-   <div class="footer">         
+    <div class="footer">
+         © 2024 CoinBliss. All rights reserved.
                     </div>
 </html>
