--- a/public_html/BudgetCalculator.html
+++ b/public_html/BudgetCalculator.html
@@ -121,6 +121,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
         
     </script>
 </body>
-   <div class="footer">         
+   <div class="footer">
+         © 2024 CoinBliss. All rights reserved.
                     </div>
 </html>
