--- a/public_html/Login.html
+++ b/public_html/Login.html
@@ -93,7 +93,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
-    <body>
+ <body>
     <div class="container">
     <h2>Login</h2>
     <form action="BudgetCalculator.html">
@@ -112,5 +112,6 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
             <a href="#">Forgot password?</a>
         </div>
     </form>
+    </div>
 </body>
 </html>
