--- a/public_html/Profile.html
+++ b/public_html/Profile.html
@@ -123,6 +123,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
             </div>
         </div>
  </body>
-    <div class="footer">         
+     <div class="footer">
+         © 2024 CoinBliss. All rights reserved.
                     </div>
 </html>
