fixed layout of code

--- a/public_html/About us.html
+++ b/public_html/About us.html
@@ -4,8 +4,9 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to c
 Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this template
 -->
 <html>
-    <link rel="stylesheet" href="ConstantStyle.css" type="text/css"/>
     <head>
+    <link rel="stylesheet" href="ConstantStyle.css" type="text/css"/>
+
         
         <title>About us</title>
         <meta charset="UTF-8">
@@ -47,7 +48,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
     <div class="topnav">
         <a href="index.html">Homepage</a>
         <a href="Login.html">Login</a>
-        <a href="SignUp.html" class="right">Sign up</a>
+        <a href="SignUp.html">Sign up</a>
     </div>
 
     <div class="container">
@@ -74,6 +75,5 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
 
     <div class="footer"></div>
 </body>
-    <div class="footer">         
-                    </div>
+  
 </html>
