--- a/public_html/index.html
+++ b/public_html/index.html
@@ -53,7 +53,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
             <div class="topnav">
                            <a href="Login.html">Login</a>
                            <a href="About us.html">About Us</a>
-                           <a href="SignUp.html" class="right">Sign up</a>
+                           <a href="SignUp.html">Sign up</a>
                        </div> 
 
               <h1 class="smoke-text">Welcome to CoinBliss</h1>
