Added instructions to to Calculator and Tracker

--- a/public_html/BudgetCalculator.html
+++ b/public_html/BudgetCalculator.html
@@ -84,7 +84,8 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
     </div>
    </div>
     <h1>Budget Calculator</h1>
-
+<div class="typewriter">
+        <h1>Please fill in this form as requested, if your not sure about terms used, check the glossary list in the resources(check menue).</h1>
     <div class="container">
         <form id="budgetForm">
             <label for="income">Monthly Income:</label>
