--- a/public_html/ExpenseTracker.html
+++ b/public_html/ExpenseTracker.html
@@ -93,6 +93,9 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
    </div>     
         
     <h1>Expense Tracker</h1>
+    <div class="typewriter">
+        <h1>Now list all of your fixed monthly expenses and it's cost,tap "add expense" after each expenses.</h1>
+   
     <div class="container">
         <form id="expenseForm">
           <label for="expenseName">Expense Name:</label>
