made main content part of parallax

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -67,7 +67,8 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
             </div>   
 
 
-            <div class="main-content">
+            <div class="parallax">
+                <div class="parallax-content">
 
                     <p>CoinBliss is a comprehensive online platform designed to empower students with effective budget management tools and resources. With a user-friendly interface and robust features, CoinBliss offers students the ability to take control of their finances, make informed decisions, and achieve their financial goals.</p>
 
