put a link to the forgot password page

--- a/public_html/Login.html
+++ b/public_html/Login.html
@@ -109,7 +109,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
         </label>
 
         <div class="psw">
-            <a href="#">Forgot password?</a>
+            <a href="ForgotPassword.html">Forgot password?</a>
         </div>
     </form>
     </div>
