--- a/public_html/ForgotPassword.html
+++ b/public_html/ForgotPassword.html
@@ -11,6 +11,16 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <style>
+             body {
+            
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+            
            .container {
             background-color: buttonhighlight;
             border-radius: 10px;
